semi perfect
